force-app/main/default/objects/Project_Extension__c/Project_Extension__c.object-meta.xml
<CustomObject>
    <label>Project Extension</label>
    <nameField>
        <label>Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Extension</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>