force-app/main/default/objects/Project_Extension__c/fields/A_E_Ordered_A__c.field-meta.xml
<CustomField>
    <fullName>A_E_Ordered_A__c</fullName>
    <label>A&amp;E Ordered (A)</label>
    <type>Date</type>
</CustomField>