force-app/main/default/objects/Project_Extension__c/fields/ABM_Exhibit_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>ABM_Exhibit_Approved_F__c</fullName>
    <label>RAN Exhibit S Approved (F)</label>
    <type>Date</type>
</CustomField>