force-app/main/default/objects/Project_Extension__c/fields/ABM_Exhibit_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>ABM_Exhibit_Submitted_F__c</fullName>
    <label>RAN Exhibit S Submitted (F)</label>
    <type>Date</type>
</CustomField>