force-app/main/default/objects/Project_Extension__c/fields/Administrative_Review_A__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Review_A__c</fullName>
    <label>Administrative Review (A)</label>
    <type>Date</type>
</CustomField>