force-app/main/default/objects/Project_Extension__c/fields/Administrative_Review_F__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Review_F__c</fullName>
    <label>Administrative Review (F)</label>
    <type>Date</type>
</CustomField>