force-app/main/default/objects/Project_Extension__c/fields/All_A_E_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>All_A_E_Complete_A__c</fullName>
    <label>All A&amp;E Complete (A)</label>
    <type>Date</type>
</CustomField>