force-app/main/default/objects/Project_Extension__c/fields/All_Regulatory_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>All_Regulatory_Complete_A__c</fullName>
    <label>All Regulatory Complete (A)</label>
    <type>Date</type>
</CustomField>