force-app/main/default/objects/Project_Extension__c/fields/AM_Study_Determination_F__c.field-meta.xml
<CustomField>
    <fullName>AM_Study_Determination_F__c</fullName>
    <label>AM Study Ordered (F)</label>
    <type>Date</type>
</CustomField>