force-app/main/default/objects/Project_Extension__c/fields/Anchor_Tenant_Installed_A__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Tenant_Installed_A__c</fullName>
    <label>Anchor Construction Complete (A)</label>
    <type>Date</type>
</CustomField>