force-app/main/default/objects/Project_Extension__c/fields/Anchor_Tenant_Installed_F__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Tenant_Installed_F__c</fullName>
    <label>Anchor Construction Complete (F)</label>
    <type>Date</type>
</CustomField>