force-app/main/default/objects/Project_Extension__c/fields/Approved_Material_SO_A__c.field-meta.xml
<CustomField>
    <fullName>Approved_Material_SO_A__c</fullName>
    <label>Approved Material SO (A)</label>
    <type>Date</type>
</CustomField>