force-app/main/default/objects/Project_Extension__c/fields/As_Built_Redline_Drawings_A__c.field-meta.xml
<CustomField>
    <fullName>As_Built_Redline_Drawings_A__c</fullName>
    <label>As-Built / Redline Drawings (A)</label>
    <type>Date</type>
</CustomField>