force-app/main/default/objects/Project_Extension__c/fields/As_Built_Survey_Received_A__c.field-meta.xml
<CustomField>
    <fullName>As_Built_Survey_Received_A__c</fullName>
    <label>As Built Survey Received (A)</label>
    <type>Date</type>
</CustomField>