force-app/main/default/objects/Project_Extension__c/fields/As_Built_Survey_Received_F__c.field-meta.xml
<CustomField>
    <fullName>As_Built_Survey_Received_F__c</fullName>
    <label>As Built Survey Received (F)</label>
    <type>Date</type>
</CustomField>