force-app/main/default/objects/Project_Extension__c/fields/Assets_Scanned_to_eTrak_A__c.field-meta.xml
<CustomField>
    <fullName>Assets_Scanned_to_eTrak_A__c</fullName>
    <label>Assets Scanned to eTrak (A)</label>
    <type>Date</type>
</CustomField>