force-app/main/default/objects/Project_Extension__c/fields/Assets_Scanned_to_eTrak_F__c.field-meta.xml
<CustomField>
    <fullName>Assets_Scanned_to_eTrak_F__c</fullName>
    <label>Assets Scanned to eTrak (F)</label>
    <type>Date</type>
</CustomField>