force-app/main/default/objects/Project_Extension__c/fields/AT_T_Provides_Notice_of_Transport_Ve_A__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Provides_Notice_of_Transport_Ve_A__c</fullName>
    <label>Carrier Prov. Notice/Trans. Vendor (A)</label>
    <type>Date</type>
</CustomField>