force-app/main/default/objects/Project_Extension__c/fields/ATT_Building_Permit_App_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>ATT_Building_Permit_App_Submitted_F__c</fullName>
    <label>Carrier BP App Submitted (F)</label>
    <type>Date</type>
</CustomField>