force-app/main/default/objects/Project_Extension__c/fields/ATT_Building_Permit_Received_A__c.field-meta.xml
<CustomField>
    <fullName>ATT_Building_Permit_Received_A__c</fullName>
    <label>Carrier BP Received (A)</label>
    <type>Date</type>
</CustomField>