force-app/main/default/objects/Project_Extension__c/fields/ATT_NTP_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>ATT_NTP_Approved_A__c</fullName>
    <label>ATT RELO NTP Approved (A)</label>
    <type>Date</type>
</CustomField>