force-app/main/default/objects/Project_Extension__c/fields/ATT_NTP_Requested_F__c.field-meta.xml
<CustomField>
    <fullName>ATT_NTP_Requested_F__c</fullName>
    <label>ATT RELO NTP Requested (F)</label>
    <type>Date</type>
</CustomField>