force-app/main/default/objects/Project_Extension__c/fields/ATT_RAN_Construction_Completed_A__c.field-meta.xml
<CustomField>
    <fullName>ATT_RAN_Construction_Completed_A__c</fullName>
    <label>RAN Construction Completed (A)</label>
    <type>Date</type>
</CustomField>