force-app/main/default/objects/Project_Extension__c/fields/ATT_RAN_Construction_Completed_F__c.field-meta.xml
<CustomField>
    <fullName>ATT_RAN_Construction_Completed_F__c</fullName>
    <label>RAN Construction Completed (F)</label>
    <type>Date</type>
</CustomField>