force-app/main/default/objects/Project_Extension__c/fields/Bill_of_Sale_Lien_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Sale_Lien_Received_F__c</fullName>
    <label>Bill of Sale / Lien Received (F)</label>
    <type>Date</type>
</CustomField>