force-app/main/default/objects/Project_Extension__c/fields/BOM_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>BOM_Approved_A__c</fullName>
    <label>BOM Approved (A)</label>
    <type>Date</type>
</CustomField>