force-app/main/default/objects/Project_Extension__c/fields/BOM_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>BOM_Approved_F__c</fullName>
    <label>BOM Approved (F)</label>
    <type>Date</type>
</CustomField>