force-app/main/default/objects/Project_Extension__c/fields/BOM_sent_to_Equipment_Provider_A__c.field-meta.xml
<CustomField>
    <fullName>BOM_sent_to_Equipment_Provider_A__c</fullName>
    <label>BOM to Material Supplier (A)</label>
    <type>Date</type>
</CustomField>