force-app/main/default/objects/Project_Extension__c/fields/BOM_sent_to_Equipment_Provider_F__c.field-meta.xml
<CustomField>
    <fullName>BOM_sent_to_Equipment_Provider_F__c</fullName>
    <label>BOM to Material Supplier (F)</label>
    <type>Date</type>
</CustomField>