force-app/main/default/objects/Project_Extension__c/fields/BTSSA_Received_A__c.field-meta.xml
<CustomField>
    <fullName>BTSSA_Received_A__c</fullName>
    <label>BTSSA Received (A)</label>
    <type>Date</type>
</CustomField>