force-app/main/default/objects/Project_Extension__c/fields/BTSSA_Received_F__c.field-meta.xml
<CustomField>
    <fullName>BTSSA_Received_F__c</fullName>
    <label>BTSSA Received (F)</label>
    <type>Date</type>
</CustomField>