force-app/main/default/objects/Project_Extension__c/fields/Build_Flow__c.field-meta.xml
<CustomField>
    <fullName>Build_Flow__c</fullName>
    <label>Build Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>RISK</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>