force-app/main/default/objects/Project_Extension__c/fields/Build_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Build_Plan_Notes__c</fullName>
    <label>Build Plan Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>