force-app/main/default/objects/Project_Extension__c/fields/Build_Risk__c.field-meta.xml
<CustomField>
    <fullName>Build_Risk__c</fullName>
    <label>Build Risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>