force-app/main/default/objects/Project_Extension__c/fields/Building_Permit_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Received_A__c</fullName>
    <label>Building Permit Received (A)</label>
    <type>Date</type>
</CustomField>