force-app/main/default/objects/Project_Extension__c/fields/Building_Permit_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Received_F__c</fullName>
    <label>Building Permit Received (F)</label>
    <type>Date</type>
</CustomField>