force-app/main/default/objects/Project_Extension__c/fields/Candidate_Search_A__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Search_A__c</fullName>
    <label>Candidate Search (A)</label>
    <type>Date</type>
</CustomField>