force-app/main/default/objects/Project_Extension__c/fields/Candidate_Search_F__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Search_F__c</fullName>
    <label>Candidate Search (F)</label>
    <type>Date</type>
</CustomField>