force-app/main/default/objects/Project_Extension__c/fields/Carrier_Gating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Gating_Reason__c</fullName>
    <label>Carrier Gating Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Build Year</fullName>
            </value>
            <value>
                <fullName>SLA/NTP</fullName>
            </value>
            <value>
                <fullName>NTP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>