force-app/main/default/objects/Project_Extension__c/fields/Carrier_Pad_Poured_A__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Pad_Poured_A__c</fullName>
    <label>Carrier Pad Poured (A)</label>
    <type>Date</type>
</CustomField>