force-app/main/default/objects/Project_Extension__c/fields/Carrier_Pad_Poured_F__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Pad_Poured_F__c</fullName>
    <label>Carrier Pad Poured (F)</label>
    <type>Date</type>
</CustomField>