force-app/main/default/objects/Project_Extension__c/fields/Carrier_RE_Complete_A__c.field-meta.xml
<CustomField>
    <fullName>Carrier_RE_Complete_A__c</fullName>
    <label>Carrier RE Complete (A)</label>
    <type>Date</type>
</CustomField>