force-app/main/default/objects/Project_Extension__c/fields/Carrier_RE_Complete_F__c.field-meta.xml
<CustomField>
    <fullName>Carrier_RE_Complete_F__c</fullName>
    <label>Carrier RE Complete (F)</label>
    <type>Date</type>
</CustomField>