force-app/main/default/objects/Project_Extension__c/fields/Certificate_of_Occupancy_BP_Final_F__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Occupancy_BP_Final_F__c</fullName>
    <label>Certificate of Occupancy/BP Final (F)</label>
    <type>Date</type>
</CustomField>