force-app/main/default/objects/Project_Extension__c/fields/CI001_Site_Ready_for_Transport_F__c.field-meta.xml
<CustomField>
    <fullName>CI001_Site_Ready_for_Transport_F__c</fullName>
    <label>MEI Checklist Complete (F)</label>
    <type>Date</type>
</CustomField>