force-app/main/default/objects/Project_Extension__c/fields/CI003_Tape_Drop_Submitted_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>CI003_Tape_Drop_Submitted_Approved_A__c</fullName>
    <label>RAN Tape Drop Approved (A)</label>
    <type>Date</type>
</CustomField>