force-app/main/default/objects/Project_Extension__c/fields/CI020_Tower_Work_RF_Path_Completed_A__c.field-meta.xml
<CustomField>
    <fullName>CI020_Tower_Work_RF_Path_Completed_A__c</fullName>
    <label>Tower Work/RF Path Completed (A)</label>
    <type>Date</type>
</CustomField>