force-app/main/default/objects/Project_Extension__c/fields/CI020_Tower_Work_RF_Path_Completed_F__c.field-meta.xml
<CustomField>
    <fullName>CI020_Tower_Work_RF_Path_Completed_F__c</fullName>
    <label>Tower Work/RF Path Completed (F)</label>
    <type>Date</type>
</CustomField>