force-app/main/default/objects/Project_Extension__c/fields/CI032_On_Air_A__c.field-meta.xml
<CustomField>
    <fullName>CI032_On_Air_A__c</fullName>
    <label>On Air (A)</label>
    <type>Date</type>
</CustomField>