force-app/main/default/objects/Project_Extension__c/fields/CI035_E_Node_B_Integration_Comp_F__c.field-meta.xml
<CustomField>
    <fullName>CI035_E_Node_B_Integration_Comp_F__c</fullName>
    <label>ENodeB Integration Completed (F)</label>
    <type>Date</type>
</CustomField>