force-app/main/default/objects/Project_Extension__c/fields/CI042_Transport_Delivered_A__c.field-meta.xml
<CustomField>
    <fullName>CI042_Transport_Delivered_A__c</fullName>
    <label>Transport Delivered (A)</label>
    <type>Date</type>
</CustomField>