force-app/main/default/objects/Project_Extension__c/fields/CI042_Transport_Delivered_F__c.field-meta.xml
<CustomField>
    <fullName>CI042_Transport_Delivered_F__c</fullName>
    <label>Transport Delivered (F)</label>
    <type>Date</type>
</CustomField>