force-app/main/default/objects/Project_Extension__c/fields/CI110_On_Air_NTP_A__c.field-meta.xml
<CustomField>
    <fullName>CI110_On_Air_NTP_A__c</fullName>
    <label>On Air NTP Received (A)</label>
    <type>Date</type>
</CustomField>