force-app/main/default/objects/Project_Extension__c/fields/CI110_On_Air_NTP_F__c.field-meta.xml
<CustomField>
    <fullName>CI110_On_Air_NTP_F__c</fullName>
    <label>On Air NTP Received (F)</label>
    <type>Date</type>
</CustomField>