force-app/main/default/objects/Project_Extension__c/fields/CI116_Site_Ready_for_OEM_Install_A__c.field-meta.xml
<CustomField>
    <fullName>CI116_Site_Ready_for_OEM_Install_A__c</fullName>
    <label>Site Ready MW Install (A)</label>
    <type>Date</type>
</CustomField>