force-app/main/default/objects/Project_Extension__c/fields/CI116_Site_Ready_for_OEM_Install_F__c.field-meta.xml
<CustomField>
    <fullName>CI116_Site_Ready_for_OEM_Install_F__c</fullName>
    <label>Site Ready MW Install (F)</label>
    <type>Date</type>
</CustomField>