force-app/main/default/objects/Project_Extension__c/fields/CI128_Tower_Crew_Work_Start_F__c.field-meta.xml
<CustomField>
    <fullName>CI128_Tower_Crew_Work_Start_F__c</fullName>
    <label>RAN Tower Work Started (F)</label>
    <type>Date</type>
</CustomField>