force-app/main/default/objects/Project_Extension__c/fields/CI166_Ready_for_Optimization_LTE_F__c.field-meta.xml
<CustomField>
    <fullName>CI166_Ready_for_Optimization_LTE_F__c</fullName>
    <label>Alarm Free hand over (F)</label>
    <type>Date</type>
</CustomField>