force-app/main/default/objects/Project_Extension__c/fields/Ciena_Equipment_SERF_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>Ciena_Equipment_SERF_Submitted_A__c</fullName>
    <label>Ciena Equipment SERF Submitted (A)</label>
    <type>Date</type>
</CustomField>