force-app/main/default/objects/Project_Extension__c/fields/Ciena_Equipment_SERF_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>Ciena_Equipment_SERF_Submitted_F__c</fullName>
    <label>Ciena Equipment SERF Submitted (F)</label>
    <type>Date</type>
</CustomField>