force-app/main/default/objects/Project_Extension__c/fields/Ciena_Install_Complete_Powered_Up_F__c.field-meta.xml
<CustomField>
    <fullName>Ciena_Install_Complete_Powered_Up_F__c</fullName>
    <label>Ciena Install Complete (Powered-Up) (F)</label>
    <type>Date</type>
</CustomField>