force-app/main/default/objects/Project_Extension__c/fields/Ciena_Prep_Kit_Delivered_F__c.field-meta.xml
<CustomField>
    <fullName>Ciena_Prep_Kit_Delivered_F__c</fullName>
    <label>Ciena Prep Kit Delivered (F)</label>
    <type>Date</type>
</CustomField>