force-app/main/default/objects/Project_Extension__c/fields/Ciena_Prep_Kit_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Ciena_Prep_Kit_Ordered_F__c</fullName>
    <label>Ciena Prep Kit Ordered (F)</label>
    <type>Date</type>
</CustomField>