force-app/main/default/objects/Project_Extension__c/fields/Ciena_Prep_Kit_RTS_A__c.field-meta.xml
<CustomField>
    <fullName>Ciena_Prep_Kit_RTS_A__c</fullName>
    <label>Ciena Prep Kit RTS (A)</label>
    <type>Date</type>
</CustomField>