force-app/main/default/objects/Project_Extension__c/fields/CL001_Turnover_Pkg_Submitted_A__c.field-meta.xml
<CustomField>
    <fullName>CL001_Turnover_Pkg_Submitted_A__c</fullName>
    <label>Location Acceptance Submitted (A)</label>
    <type>Date</type>
</CustomField>