force-app/main/default/objects/Project_Extension__c/fields/CL001_Turnover_Pkg_Submitted_F__c.field-meta.xml
<CustomField>
    <fullName>CL001_Turnover_Pkg_Submitted_F__c</fullName>
    <label>Location Acceptance Submitted (F)</label>
    <type>Date</type>
</CustomField>