force-app/main/default/objects/Project_Extension__c/fields/CL100_Final_Civil_Acceptance_A__c.field-meta.xml
<CustomField>
    <fullName>CL100_Final_Civil_Acceptance_A__c</fullName>
    <label>Final Location Acceptance (A)</label>
    <type>Date</type>
</CustomField>