force-app/main/default/objects/Project_Extension__c/fields/Closing_date_F__c.field-meta.xml
<CustomField>
    <fullName>Closing_date_F__c</fullName>
    <label>Closing/Purchase Date (F)</label>
    <type>Date</type>
</CustomField>