force-app/main/default/objects/Project_Extension__c/fields/Consent_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Consent_Received_A__c</fullName>
    <label>Consent Received (A)</label>
    <type>Date</type>
</CustomField>