force-app/main/default/objects/Project_Extension__c/fields/Consent_Received_F__c.field-meta.xml
<CustomField>
    <fullName>Consent_Received_F__c</fullName>
    <label>Consent Received (F)</label>
    <type>Date</type>
</CustomField>