force-app/main/default/objects/Project_Extension__c/fields/Consent_Requested_A__c.field-meta.xml
<CustomField>
    <fullName>Consent_Requested_A__c</fullName>
    <label>Consent Requested (A)</label>
    <type>Date</type>
</CustomField>