force-app/main/default/objects/Project_Extension__c/fields/Consent_Requested_F__c.field-meta.xml
<CustomField>
    <fullName>Consent_Requested_F__c</fullName>
    <label>Consent Requested (F)</label>
    <type>Date</type>
</CustomField>