force-app/main/default/objects/Project_Extension__c/fields/Construction_Drawings_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_Drawings_Approved_F__c</fullName>
    <label>Construction Drawings Approved (F)</label>
    <type>Date</type>
</CustomField>