force-app/main/default/objects/Project_Extension__c/fields/Construction_Drawings_Received_A__c.field-meta.xml
<CustomField>
    <fullName>Construction_Drawings_Received_A__c</fullName>
    <label>Construction Drawings Received (A)</label>
    <type>Date</type>
</CustomField>