force-app/main/default/objects/Project_Extension__c/fields/Construction_Staking_A__c.field-meta.xml
<CustomField>
    <fullName>Construction_Staking_A__c</fullName>
    <label>Construction Staking (A)</label>
    <type>Date</type>
</CustomField>