force-app/main/default/objects/Project_Extension__c/fields/Construction_Staking_F__c.field-meta.xml
<CustomField>
    <fullName>Construction_Staking_F__c</fullName>
    <label>Construction Staking (F)</label>
    <type>Date</type>
</CustomField>