force-app/main/default/objects/Project_Extension__c/fields/COP_Accepted_by_Carrier_A__c.field-meta.xml
<CustomField>
    <fullName>COP_Accepted_by_Carrier_A__c</fullName>
    <label>COP Accepted by Carrier (A)</label>
    <type>Date</type>
</CustomField>