force-app/main/default/objects/Project_Extension__c/fields/CSF_Approved_by_Customer_A__c.field-meta.xml
<CustomField>
    <fullName>CSF_Approved_by_Customer_A__c</fullName>
    <label>CSF Approved by Customer (A)</label>
    <type>Date</type>
</CustomField>