force-app/main/default/objects/Project_Extension__c/fields/CSF_Approved_by_Customer_F__c.field-meta.xml
<CustomField>
    <fullName>CSF_Approved_by_Customer_F__c</fullName>
    <label>CSF Approved by Customer (F)</label>
    <type>Date</type>
</CustomField>