force-app/main/default/objects/Project_Extension__c/fields/CSF_Submitted_to_Customer_F__c.field-meta.xml
<CustomField>
    <fullName>CSF_Submitted_to_Customer_F__c</fullName>
    <label>CSF Submitted to Customer (F)</label>
    <type>Date</type>
</CustomField>