force-app/main/default/objects/Project_Extension__c/fields/Custom_SARF_Determination_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_SARF_Determination_Date__c</fullName>
    <label>Custom SARF Determination Date</label>
    <type>Date</type>
</CustomField>