force-app/main/default/objects/Project_Extension__c/fields/Customer_Construction_Start_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_Construction_Start_A__c</fullName>
    <label>Anchor Construction Start (A)</label>
    <type>Date</type>
</CustomField>