force-app/main/default/objects/Project_Extension__c/fields/Customer_Construction_Start_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_Construction_Start_F__c</fullName>
    <label>Anchor Construction Start (F)</label>
    <type>Date</type>
</CustomField>