force-app/main/default/objects/Project_Extension__c/fields/Customer_EDD_Approval_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_EDD_Approval_A__c</fullName>
    <label>Customer EDD Approval (A)</label>
    <type>Date</type>
</CustomField>