force-app/main/default/objects/Project_Extension__c/fields/Customer_EDD_Approval_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_EDD_Approval_F__c</fullName>
    <label>Customer EDD Approval (F)</label>
    <type>Date</type>
</CustomField>