force-app/main/default/objects/Project_Extension__c/fields/Customer_Install_Closeout_Approved_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_Install_Closeout_Approved_A__c</fullName>
    <label>Customer Install Closeout Approved (A)</label>
    <type>Date</type>
</CustomField>