force-app/main/default/objects/Project_Extension__c/fields/Customer_Install_Closeout_Approved_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_Install_Closeout_Approved_F__c</fullName>
    <label>Customer Install Closeout Approved (F)</label>
    <type>Date</type>
</CustomField>