force-app/main/default/objects/Project_Extension__c/fields/Customer_Power_Ordered_F__c.field-meta.xml
<CustomField>
    <fullName>Customer_Power_Ordered_F__c</fullName>
    <label>Carrier Power Ordered (F)</label>
    <type>Date</type>
</CustomField>