force-app/main/default/objects/Project_Extension__c/fields/Detuning_Required__c.field-meta.xml
<CustomField>
    <fullName>Detuning_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detuning Required</label>
    <type>Checkbox</type>
</CustomField>