force-app/main/default/objects/Project_Extension__c/fields/Diesel_Fuel_Checklist_A__c.field-meta.xml
<CustomField>
    <fullName>Diesel_Fuel_Checklist_A__c</fullName>
    <label>Diesel Fuel Checklist (A)</label>
    <type>Date</type>
</CustomField>