force-app/main/default/objects/Project_Extension__c/fields/Diesel_Fuel_Checklist_F__c.field-meta.xml
<CustomField>
    <fullName>Diesel_Fuel_Checklist_F__c</fullName>
    <label>Diesel Fuel Checklist (F)</label>
    <type>Date</type>
</CustomField>