force-app/main/default/objects/Project_Extension__c/fields/DISH_PO_Requested_A__c.field-meta.xml
<CustomField>
    <fullName>DISH_PO_Requested_A__c</fullName>
    <label>DISH PO Requested (A)</label>
    <type>Date</type>
</CustomField>