force-app/main/default/objects/Project_Extension__c/fields/DISH_PO_Requested_F__c.field-meta.xml
<CustomField>
    <fullName>DISH_PO_Requested_F__c</fullName>
    <label>DISH PO Requested (F)</label>
    <type>Date</type>
</CustomField>