force-app/main/default/objects/Project_Extension__c/fields/Draft_Agreement_approved_by_custome_A__c.field-meta.xml
<CustomField>
    <fullName>Draft_Agreement_approved_by_custome_A__c</fullName>
    <label>Draft Approved by Customer (A)</label>
    <type>Date</type>
</CustomField>